# defender2yara

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: generate_rules.yaml  pypi_publish.yaml
AndroidOS/Adware/: Adlo.yara  MobiDash.yara  Mobidash.yara
AndroidOS/Backdoor/: Basdoor.yara  GinMaster.yara  SAgnt.yara
AndroidOS/HackTool/: Metasploit.yara
AndroidOS/MonitoringTool/: DroidWatcher.yara  MobiStealth.yara  SpyPhone.yara
AndroidOS/Trojan/: Arsink.yara  Badpack.yara  Banbra.yara  Banker.yara  BankerAgent.yara  Basbanke.yara  BlankBot.yara  Browbot.yara  Coper.yara  Ermac.yara  Ermak.yara  EvilInst.yara  FakeApp.yara  FakeInst.yara  Fakeapp.yara  Fakecalls.yara  Godfather.yara  Hiddad.yara  Hqwar.yara  IOBot.yara  Iconosys.yara  Koomer.yara  Kylk.yara  Mamont.yara  Marcher.yara  Opfake.yara  Plangton.yara  RewardSteal.yara  Rewardsteal.yara  SAgnt.yara  Savestealer.yara  SmsAgent.yara  SmsSpy.yara  SmsThief.yara  SpyAgent.yara  SpyBanker.yara  Spybanker.yara  Spynote.yara  Thamera.yara  Wroba.yara
AndroidOS/TrojanDropper/: SAgent.yara  SAgnt.yara
AndroidOS/TrojanSpy/: Abarw.yara  Ahmyth.yara  DaazBot.yara  Dabom.yara  FakeApp.yara  Fakecalls.yara  GossRat.yara  RewardSteal.yara  (+6 more)
defender2yara/: __main__.py  main.py
tests/: test_apply_vdm_deltapatch.py  test_download_latest_signature.py  test_extract_vdm.py  test_generate_subset_for_yara_condition.py  test_get_file_metadata.py  test_get_version_from_pe.py  test_ms_caro_regex.py  test_parse_mpam_fe.py  test_simplify_regex.py  testcases_hstr_ext.py  testcases_threshold_and_weights.py
(+960 files in other folders)
